== 1.0.0 (unreleased)
* Migrate to Bing Search API 2.0. See https://datamarket.azure.com/dataset/bing/search and http://go.microsoft.com/fwlink/?LinkID=248077 for more details.

== 0.3.0 2010-03-15

=== New features
* Added an Video source provider to allow for Video searching with Binged

== 0.2.0 2010-03-12

=== New features
* Added an Image source provider to allow for Image searching with Binged