@@ -1,0 +1,14 @@
+HTTP/1.1 401 The authorization type you provided is not supported.  Only Basic and OAuth are supported
+Server: Microsoft-IIS/7.5
+X-Content-Type-Options: nosniff
+Access-Control-Allow-Origin: *
+Access-Control-Allow-Credentials: false
+Access-Control-Allow-Headers: Authorization
+Access-Control-Allow-Methods: GET, POST, OPTIONS
+Access-Control-Max-Age: 604800
+WWW-Authenticate: Basic Realm=""
+X-Powered-By: ASP.NET
+Date: Tue, 06 Nov 2012 09:00:44 GMT
+Content-Length: 91
+
+The authorization type you provided is not supported.  Only Basic and OAuth are supported
